--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
+#button {
+    color: white;
+    background-color: green;
+    height: 150px;
+    width: 250px;
+    padding: 5px;
 
+    position:absolute;
+}
